# threadlane

./: .gitignore  AGENTS.md  Agent.md  Agents..md  Cargo.toml  README.md
.github/workflows/: release.yml
.superpowers/sdd/: migration-task-1-report.md  migration-task-2-report.md  migration-task-3-report.md  task-1-report.md  task-3-report.md  task-4-report.md  task-5-report.md  task-6-report.md  task-final-fix-3-report.md  task-final-fix-4-report.md  task-final-fix-5-report.md
.superpowers/sdd/composer/: task-3-report.md  task-4-report.md  task-6-report.md
crates/mypi-agent/: Cargo.toml
crates/mypi-agent/src/: agent.rs  capabilities.rs  coding_agent.rs  commands.rs  compaction.rs  engine.rs  events.rs  full_trust_extension.rs  hooks.rs  lib.rs  loop_engine.rs  packages.rs  plan_mode.rs  session.rs  session_tree.rs  skills.rs  supervisor.rs  types.rs  wasi_extension.rs
crates/mypi-agent/tests/: agent_tests.rs  prompt_template_tests.rs  supervisor_tests.rs  wasi_tests.rs
crates/mypi-coding-agent/: Cargo.toml
crates/mypi-coding-agent/src/: agents.rs  capabilities.rs  coding_agent.rs  commands.rs  context.rs  extension_broker.rs  full_trust_extension.rs  lib.rs  packages.rs  plan_mode.rs  prompt_templates.rs  skills.rs  supervisor.rs  system_prompt.rs  wasi_extension.rs
crates/mypi-coding-agent/tests/: coding_agent_tests.rs  prompt_template_tests.rs  skills_tests.rs  supervisor_tests.rs  wasi_tests.rs
crates/mypi-gui/: Cargo.toml
crates/mypi-gui/src/: app.rs  chat.rs  command_text_input.rs  components.rs  main.rs  state.rs
crates/mypi-gui/src/app/: mod.rs
crates/mypi-gui/src/components/: auth_row.rs  chat_bubble.rs  command_input.rs  composer_action.rs  composer_surface.rs  dropdown.rs  mod.rs  primitives.rs  session_row.rs  status_pill.rs
crates/mypi-gui/src/panels/: mod.rs
crates/mypi-gui/src/panels/chat/: components.rs  composer.rs  mod.rs  state.rs  view.rs
crates/mypi-gui/src/panels/command_palette/: mod.rs  state.rs  view.rs
crates/mypi-gui/src/panels/plan/: mod.rs  state.rs  view.rs
crates/mypi-gui/src/panels/sessions/: components.rs  mod.rs  project_registry.rs  state.rs  view.rs
crates/mypi-gui/src/workspace/: mod.rs
crates/mypi-provider/: Cargo.toml
crates/mypi-provider/src/: auth.rs  lib.rs  openai.rs
crates/mypi-tools/: Cargo.toml
crates/mypi-tools/src/: lib.rs
crates/threadlane/: Cargo.toml  README.md
crates/threadlane-agent/: Cargo.toml  README.md
crates/threadlane-agent/src/: compaction.rs  engine.rs  hooks.rs  loop_engine.rs  queue.rs  session.rs  session_tree.rs  types.rs
crates/threadlane-agent/tests/: agent_tests.rs
crates/threadlane-coding-agent/: Cargo.toml  README.md
crates/threadlane-coding-agent/src/: agents.rs  capabilities.rs  coding_agent.rs  commands.rs  context.rs  extension_broker.rs  frontmatter.rs  lib.rs  packages.rs  policy.rs  prompt_templates.rs  skills.rs  supervisor.rs  system_prompt.rs  wasi_extension.rs
crates/threadlane-coding-agent/tests/: coding_agent_tests.rs  prompt_template_tests.rs  skills_tests.rs  supervisor_tests.rs  wasi_tests.rs
crates/threadlane-gui/: Cargo.toml
crates/threadlane-gui/src/: state.rs
crates/threadlane-gui/src/components/: activity_header.rs  activity_loader.rs  flex_spacer.rs  init.rs  panel_surface.rs  tool_fold_header.rs
crates/threadlane-gui/src/panels/: mod.rs
crates/threadlane-gui/src/panels/chat/: events.rs
crates/threadlane-gui/src/panels/command_palette/: view.rs
crates/threadlane-gui/src/panels/sessions/: components.rs  state.rs
crates/threadlane-gui/src/workspace/: mod.rs
crates/threadlane-provider/: Cargo.toml  README.md
crates/threadlane-provider/src/: auth.rs  lib.rs  openai.rs  title_generator.rs
crates/threadlane-tools/: Cargo.toml  README.md
crates/threadlane-tools/src/: lib.rs
crates/threadlane/src/: main.rs  path_utils.rs  state.rs  updater.rs
crates/threadlane/src/app/: mod.rs
crates/threadlane/src/components/: activity_header.rs  activity_loader.rs  chat_bubble.rs  clipped_label.rs  code_label.rs  command_input.rs  composer_action.rs  context_menu.rs  dropdown.rs  empty_row.rs  icon_button.rs  mod.rs  notice_banner.rs  panel_header.rs  section_header.rs  session_row.rs  sidebar_compose_button.rs  status_dot.rs  status_pill.rs  tool_fold_header.rs  tool_section.rs
crates/threadlane/src/panels/chat/: state.rs  view.rs
crates/threadlane/src/panels/command_palette/: mod.rs  state.rs
crates/threadlane/src/panels/sessions/: mod.rs  project_registry.rs  state.rs  view.rs
docs/: extensions.md  plan_mode_extension.md
docs/superpowers/plans/: 2026-02-21-wasi-capability-broker.md  2026-07-23-adaptive-warm-studio-composer.md  2026-07-23-extension-migration.md  2026-07-23-multi-project-concurrent-workspaces.md  2026-07-23-workspace-header-hierarchy.md
docs/superpowers/specs/: 2026-02-21-wasi-capability-broker-design.md  2026-07-22-agentic-desktop-harness-design.md  2026-07-23-adaptive-warm-studio-composer-design.md  2026-07-23-stable-composer-during-generation-design.md  2026-07-23-workspace-header-hierarchy-design.md  2026-07-26-ai-session-titles-design.md
extensions/broker_smoke_ext/: Cargo.toml
extensions/broker_smoke_ext/src/: lib.rs
extensions/plan_mode_ext/: Cargo.toml
extensions/plan_mode_ext/src/: lib.rs
extensions/subagent_ext/: Cargo.toml  README.md
extensions/subagent_ext/agents/: planner.md  reviewer.md  scout.md  worker.md
extensions/subagent_ext/prompts/: implement.md  scout-and-plan.md
extensions/subagent_ext/src/: lib.rs
packaging/: Info.plist  threadlane.desktop
scripts/: build_extensions.sh
