[package]
name = "mypi-agent"
version = "0.1.0"
edition = "2021"
description = "Session state, system prompt, and agent execution loop for mypi agent"

[dependencies]
mypi-tools = { path = "../mypi-tools" }
mypi-provider = { path = "../mypi-provider" }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
wasmi = "0.36"

[dev-dependencies]
tempfile = "3.10"

