[package]
name = "mypi-coding-agent"
version = "0.1.0"
edition = "2021"
description = "Coding agent harness built on top of mypi-agent and mypi-tools"

[dependencies]
mypi-agent = { path = "../mypi-agent" }
mypi-tools = { path = "../mypi-tools" }
mypi-provider = { path = "../mypi-provider" }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"
wasmi = "0.36"
md5 = "0.7"

[dev-dependencies]
tempfile = "3.10"
