[package]
name = "mypi-gui"
version = "0.1.0"
edition = "2021"
description = "GPU Desktop UI application for mypi agent using Makepad"

[dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad.git", branch = "dev" }
unicode-segmentation = "1.12.0"
mypi-agent = { path = "../mypi-agent" }
mypi-coding-agent = { path = "../mypi-coding-agent" }
mypi-provider = { path = "../mypi-provider" }
mypi-tools = { path = "../mypi-tools" }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
