[package]
name = "threadlane-agent"
version = "0.1.0"
edition = "2021"
description = "Generic LLM session state, system prompt, and agent execution loop"

[dependencies]
threadlane-provider = { path = "../threadlane-provider" }
threadlane-tools = { path = "../threadlane-tools" }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
futures = "0.3"

[dev-dependencies]
tempfile = "3.10"
