[package]
name = "threadlane-provider"
version = "0.1.0"
edition = "2021"
description = "OpenAI REST & Codex backend streaming client and device auth for threadlane agent"

[dependencies]
threadlane-tools = { path = "../threadlane-tools" }
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3"
bytes = "1.6"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
