[package]
name = "threadlane"
version = "0.1.0"
edition = "2021"
description = "GPU Desktop UI application for threadlane agent using Makepad"

[dependencies]
makepad-widgets = { git = "https://github.com/makepad/makepad.git", branch = "dev" }
unicode-segmentation = "1.12.0"
threadlane-agent = { path = "../threadlane-agent" }
threadlane-coding-agent = { path = "../threadlane-coding-agent" }
threadlane-provider = { path = "../threadlane-provider" }
threadlane-tools = { path = "../threadlane-tools" }
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
arboard = { version = "3.6", features = ["image-data"] }
png = "0.18"
robius-file-picker = { git = "https://github.com/project-robius/robius.git" }
rfd = "0.17.2"
